# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedmsplit"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "scikit-learn>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fedmsplit"]

[tool.flwr.app]
publisher = "brechtl"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fedmsplit.server_app:app"
clientapp = "fedmsplit.client_app:app"

# ------------
# CONFIG
# ------------
# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# experiment_config = "experiments/configs/experiments/fedavg_baseline.toml"

experiment_config = "experiments/configs/experiments/fedavg_missing_views.toml"
#experiment_config = "experiments/configs/experiments/fedavg_multitask_missing_views.toml"



# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# DO NOT FORGET TO EDIT THIS!!!!
# Local simulation federation with X virtual SuperNodes
[tool.flwr.federations.local-simulation]
# options.num-supernodes = 12  # modelnet40
options.num-supernodes = 23  # sensit

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup